--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
 :root {
-	--hdr: #424242;
+	--hdr: #333333;
+	opacity: 0.7;
 	/* Header Background Color */
 	--bkg: #000000;
 	/* Background Color - Also located inside index.html <style> hard-coded */
 	--frg: #EEEEEE;
+	opacity: 0.7;
 	/* Foreground Color */
 	--hgl: #9E9E9E;
+	opacity: 0.7;
 	/* Highlight Color */
-
 	--htx: #FFFFFF;
+	opacity: 0.7;
 	/* Header Text Color */
 	--txt: #000000;
+	opacity: 0.7;
 	/* Text Color */
 }
 
@@ -31,6 +35,14 @@ div#wiper {
 	z-index: -1 !important;
 }
 
+html {
+  background: url(images/Background.png) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body>div#main {
 	transform: translate(-50%, -50%);
 	text-align: center;
@@ -46,6 +58,7 @@ body>div#main {
 	transition: .2s height;
 }
 
+  /* top bar */
 body>div#main>span>div#static_links {
 	font-family: 'Roboto', sans-serif;
 	background-color: var(--hdr);
@@ -60,6 +73,8 @@ body>div#main>span>div#static_links {
 	border: none;
 	width: 908px;
 	height: 30px;
+  border-radius: 5px 5px 0px 0px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 body>div#main>span>div#static_links>span#clock {
@@ -84,6 +99,7 @@ body>div#main>span>div#static_links>a+a {
 	margin-left: 15px;
 }
 
+  /* input box */
 body>div#main>span>form>input {
 	background-color: var(--frg);
 	font-family: 'Roboto', sans-serif;
@@ -95,7 +111,8 @@ body>div#main>span>form>input {
 	border: none;
 	width: 908px;
 	height: 50px;
-	opacity: 0.9;
+  border-radius: 0px 0px 5px 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 body>div#main>span>form>input:focus {
@@ -118,6 +135,7 @@ body>div#main>span>form>input:focus {
 	}
 }
 
+  /* link box */
 div#links>div.section {
 	background-color: var(--hdr);
 	box-sizing: border-box;
@@ -129,11 +147,15 @@ div#links>div.section {
 	margin: 2px;
 	overflow: hidden;
 	color: var(--htx);
+  border-radius: 5px 5px 5px 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+  /* link box title margin */
 div#links>div.section:before {
 	content: "";
 	margin-left: 5px;
+  margin: 0px 2px 2px 2px;
 }
 
 div#links>div.section>div {
